--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!--header section-->
     <section class="header">
         <header>
-            <div class="logo"><a>MD SAZZAD</a></div>
+            <div class="logo"><a href="#">MD SAZZAD</a></div>
             <nav class="nav-icon">
                 <a href="#"><img src="img/bars/Union.png" alt=""></a>
                 
