--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>My Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@400;700&family=Poppins:ital,wght@1,200&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Crete+Round&family=Inter:wght@700&family=Poppins:ital,wght@1,200&family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -79,7 +82,7 @@
                     </ul>
                 </div>
                 
-                <div class="card-last-button"><a href="#">See Project</a></div>
+                <div class="card-about-button"><a href="#">See Project</a></div>
             </div>
         </div>
     </div>
@@ -262,11 +265,12 @@
     </div>
    </section>
    <!--footer social media part-->
+   <div class="footer-img"><img src="img/Vector44.png" alt=""></div>
 
    <section class="footer-social-media">
     <ul class="footer-media-links">
         <li>
-          <a href="#"><img src="img/github/Vector.png" alt=""></i></a>i     </li>
+          <a href="#"><img src="img/github/Vector.png" alt=""></i></a></li>
       <li>
           <a href="#"><img src="img/linkedin/Group.png" alt=""></i></a>
       </li>
