--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@
       
       </ul>
     
-  
-</section>
+    </section>
+    <div class="footer-img-last"><img src="img/Shape.png" alt=""></div>
 
     <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
