--- a/index.html
+++ b/index.html
@@ -209,16 +209,13 @@
                     <a href="#">Javascript</a>
                 </li>
                 <li class="skillname">
-                    <a href="#">HTML</a>
+                    <a href="#">Ruby</a>
                 </li>
                 <li class="skillname">
-                    <a href="#">CSS</a>
+                    <a href="#">Html</a>
                 </li>
                 <li class="skillname">
-                    <a href="#">Gitlap</a>
-                </li>
-                <li class="skillname">
-                    <a href="#">Terminal</a>
+                    <a href="#">Css</a>
                 </li>
             </ul>
         </div>
@@ -227,19 +224,19 @@
             <h3 class="skill-img ab"> <img src="img/framwork56.png" alt=""> Framework</h3>
             <ul class="skill-group">
                 <li class="skillname spslill">
-                    <a href="#">Codekit</a>
+                    <a href="#">Bootstrap</a>
                 </li>
                 <li class="skillname">
-                    <a href="#">Github</a>
+                    <a href="#">Ruby on Rails</a>
                 </li>
                 <li class="skillname">
-                    <a href="#">Codepen</a>
+                    <a href="#">RSPec</a>
                 </li>
                 <li class="skillname">
-                    <a href="#">Gitlap</a>
+                    <a href="#">CapyBara</a>
                 </li>
                 <li class="skillname">
-                    <a href="#">Terminal</a>
+                    <a href="#">Selenium</a>
                 </li>
             </ul>
         </div>
@@ -257,7 +254,7 @@
                     <a href="#">Codepen</a>
                 </li>
                 <li class="skillname">
-                    <a href="#">Gitlap</a>
+                    <a href="#">Gitlab</a>
                 </li>
                 <li class="skillname">
                     <a class="lastskill" href="#">Terminal</a>
