--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
    <!--about section start-->
    <section class="card-3">
     <div class="card-about-title"><h3>About me</h3></div>
-    <div class="card-about-text"><P>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my work and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</P></div>
+    <div class="card-about-text"><P>Hello I’m a software developer! I can help you build a product , feature or website Look through some of my works and experience! If you like what you see and have a project you need coded, don’t hestiate to contact me.</P></div>
     <a href="#" class="card-about-button">Get My Resume</a>
     <div class="about-image"></div>
     <div class="about-vector-img"></div>
