add required on forms

--- a/index.html
+++ b/index.html
@@ -277,12 +277,12 @@
             </li>
             <li>
                 <label for="email">
-                <input type="email" id="email" name="email" placeholder="Email address">
+                <input type="email" id="email" name="email" placeholder="Email address" required>
             </label>
             </li>
             <li>
-                <label for="msg">
-                <textarea type="text" id="msg" name="msg" maxlength="500" required placeholder="Enter text here"></textarea></label>
+                <label for="message">
+                <textarea type="text" id="message" name="message" maxlength="500" required placeholder="Enter text here"></textarea></label>
             </li>
             <li>
                 <button type="submit">GET IN TOUCH</button>
