--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
     <p>
         I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
     </p>
-    <form action="">
+    <form action="https://formspree.io/f/xdovandv" method="post">
         <ul>
             <li>
                 <label for="name">
