--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
         I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
     </p>
     <form action="https://formspree.io/f/xdovandv" method="post">
-        <ul class="">
+        <ul class="form-input">
             <li>
                 <label for="name">
                 <input type="text" id="name" name="name" maxlength="30" required placeholder="Full name">
