html css file fix

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     
                 </ul>
             </div>
-            <div class="work-button-desk">
+            <div class="work-button-desk work-button-mobile">
                 <button type="button">See Project</button>
             </div>
         
@@ -325,7 +325,7 @@
                     <label for="message">
                     <textarea type="text" id="message" name="message" maxlength="500" required placeholder="Enter text here"></textarea></label>
                 </li>
-                <li>
+                <li class="contact-last-button">
                     <button type="submit">GET IN TOUCH</button>
                 </li>
             </ul>
