--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
        <!--professional part start 5-->
       
         <article class="card2  professional-card-5">
-            <div class="card-title">Profesional Art<br> Printing Data</div>
+            <div class="card-title">Professional Art<br> Printing Data</div>
             <div class="card-pro-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</div>
             <div class="card-pro-buttons">
                 <ul class="pro-buttons">
