--- a/index.html
+++ b/index.html
@@ -204,11 +204,11 @@
         
             <article class="card2  professional-card-6">
                 <div class="card-title">Professional Art<br> Printing Data</div>
-                <div class="card-pro-text">A dailly selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</div>
+                <div class="card-pro-text">A daily selection of privately personalized reads; no accounts or sign-ups required. has been the industry's standard</div>
                 <div class="card-pro-buttons">
                     <ul class="pro-buttons">
                         <li><a href="#">Html</a></li>
-                        <li><a href="#">Bootstrap</a></li>
+                        <li><a href="#">bootstrap</a></li>
                         <li><a href="#">Ruby</a></li>
                         
                     </ul>
@@ -303,7 +303,7 @@
  <section class="contact-me">
     <div class="contact-form-container">
         <p class="contact-text">
-            I'm always interested in hearring about new projects, so if you'd like to chat please get in touch.
+            I'm always interested in hearing about new projects, so if you'd like to chat please get in touch.
         </p>
     </div>
        <div class="form-part">
